--- a/wrapper.html
+++ b/wrapper.html
@@ -38,7 +38,7 @@
     {% block meta_additions %}{% endblock %}
 
     {% load_css %}
-        //https://www.dropbox.com/s/nqdb47rryfv3yca/powerPeople.css?dl=0
+        //www.dropbox.com/s/nqdb47rryfv3yca/powerPeople.css?dl=0
     {% end %}
     {% block css_additions %}{% endblock %}
 
