--- a/wrapper.html
+++ b/wrapper.html
@@ -39,6 +39,8 @@
 
     {% load_css %}
         //www.dropbox.com/s/nqdb47rryfv3yca/powerPeople.css?dl=0
+        //s3.amazonaws.com/peoplepower.org/assets/peoplepowerstyle.css?={% now "U" %}
+
     {% end %}
     {% block css_additions %}{% endblock %}
 
