--- a/wrapper.html
+++ b/wrapper.html
@@ -38,9 +38,8 @@
     {% block meta_additions %}{% endblock %}
 
     {% load_css %}
-        //www.dropbox.com/s/nqdb47rryfv3yca/powerPeople.css?dl=0
         //s3.amazonaws.com/peoplepower.org/assets/peoplepowerstyle.css?={% now "U" %}
-
+       //dl.dropboxusercontent.com/s/kh2s3ceiacifehv/powerPeople.css?dl=0
     {% end %}
     {% block css_additions %}{% endblock %}
 
