--- a/wrapper.html
+++ b/wrapper.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet75x75.jpg" sizes="32x32" />
     <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet75x75.jpg" sizes="16x16" />
     <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet100x100.jpg" sizes="128x128" />
-    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sumana" rel="stylesheet"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -38,8 +38,7 @@
     {% block meta_additions %}{% endblock %}
 
     {% load_css %}
-        //s3.amazonaws.com/peoplepower.org/assets/peoplepowerstyle.css?={% now "U" %}
-       //dl.dropboxusercontent.com/s/kh2s3ceiacifehv/powerPeople.css?dl=0
+       //dl.dropbox.com/s/sexaowvnibf63n3/powerPeople.css?dl=0
     {% end %}
     {% block css_additions %}{% endblock %}
 
