Updated petition page to reflect new page if at specific url.

--- a/petition.html
+++ b/petition.html
@@ -6,7 +6,9 @@
 
 <form class="ak-form" name="act" method="POST" action="/act/" accept-charset="utf-8">
     <input type="hidden" name="page" value="{{ page.name }}">
-
+    {% if "sign-up-meet-your-rep" in request.get_full_path %}
+        {% include "./petition_meet_rep.html" %}
+    {% elif %}
     <div class="ak-grid-row">
         <div class="ak-grid-col ak-grid-col-12-of-12">
             <h2>{{ page.title }}</h2>
@@ -14,7 +16,7 @@
     </div>
 
     <div class="ak-grid-row">
-
+        {% if "sign-up-meet-your-rep" in request.get_full_path %}
         <div class="ak-grid-col ak-grid-col-7-of-12">
             {% if page.custom_fields.featured_image or form.about_text %}
             <div id="ak-petition-story">
@@ -64,14 +66,6 @@
 
                     {# Optional TAF {% include "./inline_tellafriend.html" %} #}
 
-                    <button type="submit" class="ak-submit-button">Sign Up</button>
-                    {% if "sign-up-meet-your-rep" in request.get_full_path %}
-                    <a class="ak-button ak-share-button ak-small-share-button ak-facebook" href="/share/link?type=fb&amp;page_name={{page.name}}&amp;akid={{akid}}" target="_blank">Post to Facebook</a>
-                    
-                    <a class="ak-button ak-share-button ak-small-share-button ak-twitter" href="/share/link?type=tw&amp;page_name={{page.name}}&amp;&amp;akid={{akid}}" target="_blank">Share on Twitter</a>
-                    
-                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    {% endif %}
                 </div>
 
             </div>
@@ -79,7 +73,7 @@
         </div>
 
     </div><!--gridrow-->
-
+{% endif %}
 </form>
 
 {% endblock %}
